src/App.css
/*
Page styling regulars:
  
  Primary colors: 
    orange: #F26925
    white: #FFFFFF
    dark gray: #474C55
  
  secondary colors:
    blue: #72A4C2
    yellow: #FCB414
    light gray: #B9B9BA

  h1:
    font: futura-medium
    size: 48
  h2:
    font: futura-medium
    size: 38
  h3:
    font: futura-book
    size 30
    letter space: 3%
  text: 
    font: futura
    size: 24
    letter space: 3%
  comments:
    font: futura-book
    size: 18
    letter space: 3%
  subtext:
    font: futura-book
    size: 12
    letter space: 3%
*/

@font-face {
    font-family: futura-bold;
    src: url('./assets/fonts/Futura-Std-Bold.otf');
}

@font-face {
    font-family: futura-book;
    src: url('./assets/fonts/Futura-Std-Book.otf');
}

@font-face {
    font-family: futura-heavy;
    src: url('./assets/fonts/Futura-Std-Heavy.otf');
}

@font-face {
    font-family: futura-medium;
    src: url('./assets/fonts/Futura-Std-Medium.otf');
}


/*LOGIN & REGISTRATION*/

.loginRow {
    margin-right: 150px;
}

.loginRow h2 {
    color: #474C55;
    font-family: 'futura-medium';
    font-size: 48px;
    margin-bottom: 20px;
}

h3 {
    font-family: futura-book;
    font-size: 30px;
    letter-spacing: 3%;
}

#cardSubtitle {
    font-family: futura-book;
    font-size: 18px;
    letter-spacing: 3%;
}

#postBody {
    font-family: futura-book;
    font-size: 24px;
    letter-spacing: 3%;
}

#navbar {
    background-color: "#B9B9BA";
    width: 150;
    height: "100vh";
    min-height: "450px";
    /* font-size: "24px";
    line-height: "30px"; */
}

#loginLink,
#registerLink,
#logoutLink {
    color: white;
    font-size: 38px;
    font-family: 'futura-medium';
    margin-top: 7vh;
    padding-bottom: 15px;
}

#profileLink {
    color: white;
    font-size: 38px;
    font-family: 'futura-medium';
    margin-top: 7vh;
}

#loginLink:hover,
#registerLink:hover,
#profileLink:hover,
#logoutLink:hover {
    background-color: #F26925;
}


/* ul {
    color: #ffff;
    font-size: 38;
} */


/* post feed */

#feedBody {
    transition-property: all;
    transition-duration: 3s;
    transition-timing-function: ease;
}

#postCard {
    text-align: left;
    margin-top: 50px;
    border-radius: 20px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

#commentBody {
    font-family: futura-book;
    font-size: 18px;
}

#commentfFooter {
    font-family: futura-book;
    font-size: 12px;
}

#reverbIcon {
    width: 25px;
    transition-property: all;
    transition-duration: .5s;
    transition-timing-function: ease-in-out;
}

#reverbIcon:hover {
    transform: translateX(5px);
    transition-property: all;
    transition-duration: .5s;
    transition-timing-function: ease-in-out;
}

#reverbButton {
    color: white;
    background-color: #F26925;
    border-radius: 20px;
}

#feedButtons {
    margin-bottom: 10%;
}

#feedButtons button {
    background-color: #F26925;
    border-color: #F26925;
}

#feedButtons button img {
    height: 20px;
}

#postBtn {
    float: left;
}

#refreshBtn {
    float: right;
}

#postBtn,
#refreshBtn,
#leaveCommentBtn,
#submitPostBtn,
#submitCommentBtn {
    background-color: #72A4C2;
    border-color: #72A4C2;
    border-radius: 20px;
    font-family: futura-book;
    font-size: 18px;
}

#postColumn {
    background-color: #474C55;
    padding-top: 2%;
    padding-right: 10%;
    padding-left: 10%;
    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
}

#landingCard {
    padding: 10%;
    margin: 10%;
    border-radius: 2%;
    background-color: #474C55;
    color: white;
}

#loginDiv {
    /* border: solid; */
    min-width: '600px';
    min-height: '500px';
    text-align: center;
}

#loginCard {
    background-color: #474C55;
    color: white;
    min-width: 600px;
    min-height: 500px;
    margin: 0;
    border-radius: 20px;
}

#loginCard button {
    border-color: #F26925;
    background-color: #F26925;
    max-width: 150px;
    min-height: 40px;
    border-radius: 13px;
    font-family: futura-book;
    font-size: 30px;
}

#loginCard input {
    margin-right: auto;
    margin-left: auto;
    margin-top: 20px;
    margin-bottom: 60px;
    max-width: 350px;
    /* min-height: 40px; */
    font-size: 18px;
    border-radius: 20px;
}

#landingCard {
    background: #474C55;
    color: white;
    margin: 5%;
    border-radius: 20px;
}

#email,
#password {
    font-family: 'futura-medium';
    font-size: 36px;
}


/* PROFILE */

#ProfilePage {
    width: 600px;
    max-width: 1000px;
    height: 600px;
    max-height: 1000px;
    margin: 1rem;
    padding: 2rem;
    box-shadow: 0 0 40px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    background-color: #474C55;
}

#EditProfile {
    width: 1000px;
    max-width: 1000px;
    margin: 1rem;
    padding: 2rem;
    box-shadow: 6px 6px 5px rgba(0, 0, 0, 0.2);
    border-radius: 4px;
    background-color: #474C55;
}

#ProfileName {
    text-align: center;
    color: white;
    font-family: 'futura-medium';
    font-size: 48px;
    letter-spacing: 0%;
}

#AboutMe {
    background-color: white;
    margin-left: -30px;
    margin-right: -30px;
    padding: 15px;
    border-radius: 10px;
    text-align: justify;
    text-indent: 5px;
    font-family: futura-book;
    font-size: 12;
    letter-spacing: 3%;
}

#AboutMe h5 {
    font-family: futura-medium;
}

#HeaderImg {
    height: 120px;
    width: 1300px;
    position: relative;
    object-fit: fit;
    top: 0;
    left: 0;
    z-index: 1;
}

#ProfileImg {
    border: 2px solid #72A4C2;
    border-radius: 50%;
    /* filter: brightness(); */
    height: 120px;
    width: 30%;
    position: absolute;
    top: 50px;
    left: 200px;
    z-index: 2;
}

#LoadingImg {
    height: '96px';
    width: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#editCol2 {
    margin-left: -20px !important;
    padding-left: 20px !important;
    border-left: 3px solid #ffff;
}

#editCol1 {
    padding-right: 20px !important;
}

#editCol1,
#editCol2 {
    margin: 20px;
}

#updateProfileBtnCol,
#cancelProfileBtnCol {
    text-align: center;
}

#editButtonsRow {
    margin-top: 30px;
}

#EditProfile .form_input-group {
    margin-bottom: 1rem;
    color: white;
    font-size: 48;
    font-family: 'futura-book';
}

#EditProfile .form_input {
    display: block;
    width: 100%;
    padding: 0.7rem;
    box-sizing: border-box;
    border-radius: 4px;
    border: 2px solid #DDDDDD;
    outline: none;
    background: #EEEEEE;
    transition: background 0.2s, border-color 0.2s;
}

#EditProfile .form_input:focus {
    border-color: blue;
    background: white;
}

#EditProfile .form_link {
    color: blue;
    cursor: pointer;
    text-decoration: none;
    font-size: 20px;
}

#EditProfile .form_link:hover {
    text-decoration: underline;
    color: Green;
}


/* BUTTONS */

#EditProfileButton,
#UpdateProfile {
    background-color: #72A4C2;
    border-color: transparent;
    border-radius: 10px;
    color: white;
    font-family: futura-book;
}

#UpdateProfile {
    width: 10em;
    height: 2.5em;
}

#CancelEdits {
    height: 2.5em;
    width: 10em;
    background-color: #FCB414;
    border-color: transparent;
    border-radius: 10px;
    color: white;
    font-family: futura-book;
}

#postBtn,
#refreshBtn,
#leaveCommentBtn,
#submitPostBtn,
#submitCommentBtn,
#loginCard button,
#EditProfileButton,
#UpdateProfile,
#CancelEdits {
    transition-property: all;
    -webkit-transition-property: all;
    transition-duration: .2s;
    -webkit-transition-duration: .2s;
    transition-timing-function: ease;
    -webkit-transition-timing-function: ease;
}

#postBtn:hover,
#refreshBtn:hover,
#leaveCommentBtn:hover,
#submitPostBtn:hover,
#submitCommentBtn:hover,
#loginCard button:hover,
#EditProfileButton:hover,
#UpdateProfile:hover,
#CancelEdits:hover {
    transition-property: all;
    -webkit-transition-property: all;
    transition-duration: .2s;
    -webkit-transition-duration: .2s;
    transition-timing-function: ease;
    -webkit-transition-timing-function: ease;
    font-weight: bold;
    transform: scale(1.05);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

#homeLink:hover {
    transition-property: all;
    -webkit-transition-property: all;
    transition-duration: .2s;
    -webkit-transition-duration: .2s;
    transition-timing-function: ease;
    -webkit-transition-timing-function: ease;
    transform: scale(1.03);
}

